--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_KEY='secret-key-string'
-PORT=5000
+APP_PORT=5000
 
-DATABASE_HOST = 'localhost'
-DATABASE_USER = 'root'
-DATABASE_PASSWORD = ''
-DATABASE_NAME = 'ex_shop'
-DATABASE_DIALECT = 'mysql'
+DB_USERNAME='root'
+DB_PASSWORD=''
+DB_NAME='ex_shop'
+DB_HOSTNAME='127.0.0.1'
+DB_PORT=3306
+DB_DIALECT='mysql'
